[package]
name = "multiverse"
version = "0.1.0"
edition = "2021"
authors = [ "nicolas@primetype.co.uk" ]
description = "Managing multiple state branches accross a potentially diverging and conflicting timeline"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dcSpark/multiverse-rs"
documentation = "https://docs.rs/multiverse"

[features]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = [ "derive", "rc" ] }
serde_json = { version = "1.0", features = [] }
tracing = { version = "0.1" }

sled = { version = "0.34"}

bigdecimal = { version = "0.3.0" }

[dev-dependencies]
anyhow = "1.0"
smoke = { version = "0.3" }
smoke-macros = { version = '0.1'}